# go-microservices-monorepo

./: .gitignore  BAZEL_GUIDE.md  BAZEL_VS_DOCKER.md  BUILD.bazel  CLEAN_ARCHITECTURE.md  DEVELOPER_GUIDE.md  Dockerfile  EMAIL_TESTING.md  KEYCLOAK_AUTH.md  KEYCLOAK_SETUP.md  Makefile  PRODUCTION.md  QUICKSTART.md  README.md  SECURITY_ARCHITECTURE.md  WALKTHROUGH.md  WORKSPACE  deps.bzl  docker-compose.yml  go.mod  go.sum  run.sh  start-all.sh
api-gateway/: BUILD.bazel  Dockerfile  main.go
api-gateway/clients/: BUILD.bazel  expense_client.go  user_client.go
api-gateway/handlers/: BUILD.bazel  auth.go  expenses.go  users.go
api-gateway/middleware/: BUILD.bazel  audit.go  auth.go  logger.go  ratelimit.go
client/: BUILD.bazel  client.go
config/: base.yaml
internal/expense/domain/: BUILD.bazel  errors.go  expense.go
internal/expense/handler/: BUILD.bazel  grpc.go
internal/expense/repository/: BUILD.bazel  gorm.go  repository.go
internal/expense/service/: BUILD.bazel  expense.go  service.go
internal/user/domain/: BUILD.bazel  errors.go  user.go
internal/user/handler/: BUILD.bazel  grpc.go
internal/user/repository/: BUILD.bazel  gorm.go  repository.go
internal/user/service/: BUILD.bazel  service.go  user.go
keycloak/: realm-export.json
pkg/auth/: BUILD.bazel  audit.go  interceptor.go  jwt.go  ratelimit.go
pkg/config/: BUILD.bazel  config.go
pkg/keycloak/: BUILD.bazel  client.go  password_reset.go
pkg/logger/: BUILD.bazel  logger.go
pkg/server/: BUILD.bazel  server.go
proto/expense/: BUILD.bazel  expense.pb.go  expense.proto  expense_grpc.pb.go
proto/user/: BUILD.bazel  user.pb.go  user.proto  user_grpc.pb.go
scripts/: configure_keycloak_permissions.py  configure_smtp.py  create_user_in_db.py  create_user_master_admin.py  generate-certs.sh  setup_keycloak_once.py  test_keycloak_user_creation.py
services/expense/: BUILD.bazel  main.go
services/user/: BUILD.bazel  main.go
storage/: BUILD.bazel  db.go  models.go
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  index.css
web/src/components/: CreateExpenseForm.jsx
web/src/components/auth/: ForgotPasswordForm.jsx  LoginForm.jsx  RegisterForm.jsx
web/src/pages/: Dashboard.jsx  Friends.jsx
web/src/services/: api.js  auth.js  expenses.js  user.js
web/src/store/: authStore.js
