load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "client_lib",
    srcs = ["client.go"],
    importpath = "github.com/vinay/splitwise-grpc/client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/expense",
        "//proto/user",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
