load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "clients",
    srcs = [
        "expense_client.go",
        "user_client.go",
    ],
    importpath = "github.com/vinay/splitwise-grpc/api-gateway/clients",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/expense",
        "//proto/user",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
    ],
)
