load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "user_proto",
    srcs = ["user.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "user_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/vinay/splitwise-grpc/proto/user",
    proto = ":user_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "user",
    embed = [":user_go_proto"],
    importpath = "github.com/vinay/splitwise-grpc/proto/user",
    visibility = ["//visibility:public"],
)
